# lse-xsens-mti

./: CMakeLists.txt  manifest.xml  package.xml  xsensDriver.launch
src/: mti_node.cpp
src/MTi/: MTMessage.cpp  MTi.cpp  MTi.h
